--- a/pastelka/scss/_variables.scss
+++ b/pastelka/scss/_variables.scss
@@ -5,12 +5,15 @@ $primeDark: #9a008d;
 $pink1: #c0429e;
 $pink2: #d675bc;
 $pink3: #debcf8;
+$pink4: #e5c3ff;
+
 
 
 $purple1: #9951bd;
 
 $gray1: #444444;
 $gray2: #505050;
+$gray3: #757575;
 
 $green1: #99b84d;
 $green2: #a9ca54;
