--- a/pastelka/scss/_variables.scss
+++ b/pastelka/scss/_variables.scss
@@ -14,6 +14,9 @@ $purple1: #9951bd;
 $gray1: #444444;
 $gray2: #505050;
 $gray3: #757575;
+$gray4: #a1a1a1;
+$gray5: #eeeeee;
+$gray6: #d3d3d3;
 
 $green1: #99b84d;
 $green2: #a9ca54;
