--- a/pastelka/css/bootstrap.css
+++ b/pastelka/css/bootstrap.css
@@ -1106,11 +1106,11 @@ a {
   color: #428bca;
   text-decoration: none;
 }
-a:hover,
-a:focus {
-  color: #2a6496;
-  text-decoration: underline;
-}
+/*a:hover,*/
+/*a:focus {*/
+  /*color: #2a6496;*/
+  /*text-decoration: underline;*/
+/*}*/
 a:focus {
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
